--- a/templates/user_management/login/root_login.html
+++ b/templates/user_management/login/root_login.html
@@ -26,10 +26,10 @@
                     </ul>
                 </div>
                 <div class="flex justify-end">
-                    <a href="{% url 'user_management:forgot_password' %}" class="text-end text-sm text-gray-500 hover:text-gray-900">Forgot password?</a>
+                    <a href="{% url 'user_management:forgot_password' %}" class="mt-1 text-end text-sm text-gray-500 hover:text-gray-900">Forgot password?</a>
                 </div>
                 <div class="flex justify-center">
-                    <button type="submit" class="mx-auto py-2 mt-4 px-4 bg-gray-300">Log In</button>
+                    <button type="submit" class="mt-5 bg-gray-100 dark:bg-gray-500 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Log In</button>
                 </div>
             </form>
           </div>
