--- a/templates/user_management/signup/index.html
+++ b/templates/user_management/signup/index.html
@@ -5,35 +5,70 @@
 {% block content %}
     <div class="relative bg-white px-6 pt-10 pb-8 shadow-2xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg dark:bg-gray-700 sm:px-10 mb-12">
       <div class="mx-auto max-w-md">
-        <a class="justify-content-center grid grid-cols-1 place-items-center mb-4" href={% url 'base:index' %}>
-            {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
-        </a>
-        <div class="divide-y divide-gray-300/50">
-          <div class="space-y-6 pt-1 text-base leading-7 dark:text-white text-black">
-            <p class="text-center">Sign up to Pyrl!</p>
-            <form method="post" class="flex-nowrap justify-center items-center">
-                <div class="mx-auto">
-                    {% csrf_token %}
-                    <ul class="space-y-2">
-                        {% for field in form %}
-                        <li class="flex justify-center">
-                            <p class="font-semibold border-b border-gray-300">{{ field.label }}</p>
-                        </li>
-                        <li class="flex justify-center min-w-full">
-                            {{ field }}
-                        </li>
-                        {% endfor %}
-                    </ul>
+        <div class="flex flex-row">
+            <div>
+                <a class="justify-content-center grid grid-cols-1 place-items-center mb-4" href={% url 'base:index' %}>
+                    {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
+                </a>
+                <div class="divide-y divide-gray-300/50">
+                    <div class="space-y-6 pt-1 text-base leading-7 dark:text-white text-black">
+                        <p class="text-center">Sign up to Pyrl!</p>
+                        <form method="post" class="flex-nowrap justify-center items-center">
+                            <div class="mx-auto">
+                                {% csrf_token %}
+                                <ul class="space-y-2">
+                                    {% for field in form %}
+                                    <li class="flex justify-center">
+                                        <p class="font-semibold border-b border-gray-300">{{ field.label }}</p>
+                                    </li>
+                                    <li class="flex justify-center min-w-full">
+                                        {{ field }}
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="flex justify-end">
+                                <a href="{% url 'user_management:forgot_password' %}" class="text-end text-sm text-gray-500 hover:text-gray-900">Forgot password?</a>
+                            </div>
+                            <div class="flex justify-center">
+                                <button type="submit" class="mx-auto py-2 mt-4 px-4 bg-gray-300">Log In</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="flex justify-end">
-                    <a href="{% url 'user_management:forgot_password' %}" class="text-end text-sm text-gray-500 hover:text-gray-900">Forgot password?</a>
+            </div>
+            <div>
+                <a class="justify-content-center grid grid-cols-1 place-items-center mb-4" href={% url 'base:index' %}>
+                    {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
+                </a>
+                <div class="divide-y divide-gray-300/50">
+                    <div class="space-y-6 pt-1 text-base leading-7 dark:text-white text-black">
+                        <p class="text-center">Sign up to Pyrl!</p>
+                        <form method="post" class="flex-nowrap justify-center items-center">
+                            <div class="mx-auto">
+                                {% csrf_token %}
+                                <ul class="space-y-2">
+                                    {% for field in form %}
+                                    <li class="flex justify-center">
+                                        <p class="font-semibold border-b border-gray-300">{{ field.label }}</p>
+                                    </li>
+                                    <li class="flex justify-center min-w-full">
+                                        {{ field }}
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="flex justify-end">
+                                <a href="{% url 'user_management:forgot_password' %}" class="text-end text-sm text-gray-500 hover:text-gray-900">Forgot password?</a>
+                            </div>
+                            <div class="flex justify-center">
+                                <button type="submit" class="mx-auto py-2 mt-4 px-4 bg-gray-300">Log In</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="flex justify-center">
-                    <button type="submit" class="mx-auto py-2 mt-4 px-4 bg-gray-300">Log In</button>
-                </div>
-            </form>
-          </div>
-      </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
 {% block scripts %}
