--- a/templates/widgets/input.html
+++ b/templates/widgets/input.html
@@ -1,9 +1,10 @@
 <input 
     type="{{ widget.type }}" 
     name="{{ widget.name }}"
+    class="bg-red-500 text-black"
     {% if widget.value != None %} 
     value="{{ widget.value|stringformat:'s' }}"
     {% endif %}
     {% include"django/forms/widgets/attrs.html" %}
->
+/>
 <p>TEST WIDGET</p>
