Add: Front end of signup page is now finished, needs ajax and polishing to complete. No backend completed for saving / cleaning input data from form + password validation

--- a/templates/user_management/login/root_login.html
+++ b/templates/user_management/login/root_login.html
@@ -16,10 +16,10 @@
                     {% csrf_token %}
                     <ul class="space-y-2">
                         {% for field in form %}
-                        <li class="flex justify-center">
+                        {% comment %} <li class="flex justify-center">
                             <p class="font-semibold border-b border-gray-300">{{ field.label }}</p>
-                        </li>
-                        <li class="flex justify-center min-w-full">
+                        </li> {% endcomment %}
+                        <li class="flex justify-center min-w-full pt-5">
                             {{ field }}
                         </li>
                         {% endfor %}
