--- a/user_management/templates/widgets/clearing_input.html
+++ b/user_management/templates/widgets/clearing_input.html
@@ -5,6 +5,8 @@
         style="{{ widget.styles }}"
     {% endif %}
 
+    OnClick="clear_element_by_id('id_{{ widget.name }}', '{{ widget.name }}')"
+
     type="{{ widget.type }}" 
     name="{{ widget.name }}"
 
