Added in more fucking images

--- a/templates/user_management/login/forgot_password.html
+++ b/templates/user_management/login/forgot_password.html
@@ -1,4 +1,4 @@
-{% extends "base/home/base_new.html" %}
+{% extends "base/home/base.html" %}
 {% load static %}
 {% load custom_tags%}
 {% block title %}{{page_title}}{% endblock %}
