--- a/templates/base/about/index.html
+++ b/templates/base/about/index.html
@@ -1,4 +1,4 @@
-{% extends "base/home/base_new.html" %}
+{% extends "base/home/base.html" %}
 {% load static %}
 {% load custom_tags %}
 {% block title %}{{page_title}}{% endblock %}
@@ -9,7 +9,8 @@
         <h2 class="text-center text-xl font-semibold">
             {{'NAME'|get_setting}} is a web application for managing your clients, staff and business relationships.
         </h2>
-        <p class="pl-24 pr-24">Hello World</p>
+        <p class="pl-24 pr-24">Offering services from multiple industries to pull together an application tailored to your needs.</p>
+        <p class="pl-24 pr-24">View dashoa</p>
     </div>
 </div>
 {% endblock %}
