--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -12,15 +12,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link type="css" rel="stylesheet" href="/static/css/dist/styles.css"/>
     <link href={% static 'css/dist/styles.css' %}/>
-    <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
+    <title>{% block title %}{% endblock %} {{'DIVIDER'|get_setting }} {{ 'NAME'|get_setting }}</title>
 </head>
 <body class="bg-white dark:bg-gray-900 text-black dark:text-white">
-    {% include 'fragments/navbar.html' %}
-    <div class="bg-gray-100 dark:bg-gray-900">
+    {% include 'fragments/navbar_submenu.html' %}
+    <div class="dark:bg-gray-800 mt-[116px]">
         {% block content %}
         {% endblock %}
     </div>
-    {% include 'fragments/footer.html' %}
+    {% include 'fragments/footer_new.html' %}
 </body>
     <span scripts>
         {% block scripts%}
