--- a/templates/base/pricing/index.html
+++ b/templates/base/pricing/index.html
@@ -1,4 +1,4 @@
-{% extends "base/home/base_new.html" %}
+{% extends "base/home/base.html" %}
 {% load static %}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
