Add: Added in details

--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -15,7 +15,7 @@
                     <p class="pb-2">For you, your clients, and your business needs.</p>
                     <p class="pb-2">Client management, open communication, securely, in one place.</p>
                     <div class="items-center justify-center flex">
-                        <a href={% url "base:pricing" %} class="text-lg bg-gray-100 dark:bg-gray-900 dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl p-2 ease-in-out duration-300 hover:bg-gray-700 hover:text-white">Get Started</a>
+                        <a href={% url "base:pricing" %} class="text-lg bg-gray-100 dark:bg-gray-900 hover:bg-pyrl-active focus:shadow-inner hover:shadow-2xl p-2 ease-in-out duration-300 hover:text-white">Get Started</a>
                     </div>
                 </div>
             </div>
