--- a/templates/user_management/signup/index.html
+++ b/templates/user_management/signup/index.html
@@ -25,15 +25,20 @@
                           <form>
                             <!--Sign in section-->
                             <div
+                              class="">
+                              <p class="mb-0 me-4 text-2xl text-center">Sign up</p>
+                            </div>
+                            {% comment %} <div
                               class="flex flex-row items-center justify-center lg:justify-start">
-                              <p class="mb-0 me-4 text-lg">Sign up with</p>
+                              <p class="mb-0 me-4 text-2xl text-center">Sign up</p>
+                            </div> {% endcomment %}
                   
-                              <!-- Facebook -->
+                              {% comment %} <!-- Facebook -->
                               <button
                                 type="button"
                                 data-twe-ripple-init
                                 data-twe-ripple-color="light"
-                                class=" mx-1 inline-block h-9 w-9 rounded-full bg-primary fill-white p-2 uppercase leading-normal shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                                class=" mx-1 inline-block h-9 w-9 rounded-full bg-pyrl-active fill-white p-2 uppercase leading-normal shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
                                 <!-- Facebook -->
                                 <span class="[&>svg]:mx-auto [&>svg]:h-3.5 [&>svg]:w-3.5">
                                   <svg
@@ -51,7 +56,7 @@
                                 type="button"
                                 data-twe-ripple-init
                                 data-twe-ripple-color="light"
-                                class=" mx-1 inline-block h-9 w-9 rounded-full bg-primary fill-white p-2 uppercase leading-normal shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                                class=" mx-1 inline-block h-9 w-9 rounded-full bg-pyrl-active fill-white p-2 uppercase leading-normal shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
                                 <!-- X -->
                                 <span class="[&>svg]:mx-auto [&>svg]:h-3.5 [&>svg]:w-3.5">
                                   <svg
@@ -69,7 +74,7 @@
                                 type="button"
                                 data-twe-ripple-init
                                 data-twe-ripple-color="light"
-                                class=" mx-1 inline-block h-9 w-9 rounded-full bg-primary fill-white p-2 uppercase leading-normal shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                                class=" mx-1 inline-block h-9 w-9 rounded-full bg-pyrl-active fill-white p-2 uppercase leading-normal shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
                                 <!-- Linkedin -->
                                 <span class="[&>svg]:mx-auto [&>svg]:h-3.5 [&>svg]:w-3.5">
                                   <svg
@@ -90,7 +95,7 @@
                                 class="mx-4 mb-0 text-center font-semibold dark:text-white">
                                 Or
                               </p>
-                            </div>
+                            </div> {% endcomment %}
                             
                             {% for field in form %}
                             <div class="relative mb-6" data-twe-input-wrapper-init>
