--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -10,7 +10,7 @@
             <div class="absolute flex justify-center items-center z-10 inset-0 z-10 max-h-1/3 p-4 text-center bg-gray-300 dark:bg-gray-700 ease-in-out duration-700 hover:opacity-100 opacity-0 focus:opacity-100">
                 <div class="inset-0 justify-center items-center z-10 align-content-center text-lg">
                     <div class="flex justify-center p-4">
-                        {{'text-black dark:text-white'|get_pyrl_logo}}
+                        {{'text-black dark:text-white hover:text-pyrl-active'|get_pyrl_logo}}
                     </div>
                     <p class="pb-2">For you, your clients, and your business needs.</p>
                     <p class="pb-2">Client management, open communication, securely, in one place.</p>
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="m-auto min-h-full max-h-fit p-4 mb-4">
+    <div class="m-auto min-h-full max-h-fit p-4">
       <div class="grid sm:grid-cols-1 md:grid-cols-3">
         <h1 class="border-b mb-2 border-gray-200 sm:col-start-1 sm:col-end-2 md:col-start-2 md:col-end-3 dark:border-gray-700 text-center text-2xl font-bold pb-2">Welcome to {{'NAME'|get_setting}}</h1>
       </div>
@@ -33,7 +33,7 @@
     </div>
     <h1 class="text-4xl text-center md:xl:text-5xl font-bold pb-2">Our core tenets</h1>
     <p class="mb-2 text-center text-xl">What do we value most at {{'NAME'|get_setting}}?</p>
-    <div class="flex flex-wrap justify-around pb-4 gap-4">
+    <div class="flex flex-wrap justify-around pb-12 gap-12">
         <div class="max-w-sm rounded overflow-hidden shadow-lg bg-gray-100 dark:bg-gray-500 p-4">
             <img class="w-full" src="{% static 'img/svg_images/analysis.svg' %}" alt="Sunset in the mountains">
             <div class="px-6 py-4">
