--- a/templates/fragments/footer.html
+++ b/templates/fragments/footer.html
@@ -1,10 +1,10 @@
 {% load custom_tags %}
-<footer class="bg-white dark:bg-gray-900">
+<footer class="bg-gray-100 dark:bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a href={% url 'base:index' %} class="flex items-center">
-                    {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
+                    {{'fill-current hover:text-pyrl-active ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
               </a>
           </div>
           <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
