--- a/templates/user_management/signup/index.html
+++ b/templates/user_management/signup/index.html
@@ -7,7 +7,7 @@
       <div class="mx-auto">
         <div class="flex flex-row">
             <div>
-                <section class="">
+                <section class="section-1">
                     <div class="py-12">
                       <!-- Left column container with background-->
                       <div
@@ -21,7 +21,7 @@
                         </div>
                   
                         <!-- Right column container -->
-                        <div class="mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
+                        <div class="mb-12 md:mb-0 w-[100%] md:w-8/12 lg:w-5/12 xl:w-5/12">
                           <form>
                             <!--Sign in section-->
                             <div
@@ -104,7 +104,7 @@
                                   class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[twe-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-white dark:placeholder:text-neutral-300 dark:autofill:shadow-autofill dark:peer-focus:text-primary [&:not([data-twe-input-placeholder-active])]:placeholder:opacity-0"
                                   id="exampleFormControlInput2"
                                   placeholder="Email address" /> {% endcomment %}
-                                  <div class="w-[80%] mx-auto">
+                                  <div class="w-[100%] md:w-[80%] mx-auto">
                                     {{ field }}
                                   </div>
                               </div>
@@ -154,7 +154,13 @@
                       </div>
                     </div>
                   </section>
-            </div>
+                  {% comment %} <section class="section-2">
+                    <p>test section 2</p>
+                  </section>
+                  <section class="section-3">
+                    <p>test section 3</p>
+                  </section> {% endcomment %}
+                </div>
         </div>
     </div>
 {% endblock %}
