--- a/user_management/templates/widgets/large_input.html
+++ b/user_management/templates/widgets/large_input.html
@@ -1,5 +1,5 @@
 <input 
-    class="{% if widget.classes %}{{ widget.classes }}{% endif %} w-full border-0 bg-white dark:bg-gray-700 focus:text-black text-gray-400 dark:text-white border-b border-b-1 dark:border-b-gray-500 border-b-gray-300 focus:ring-0 focus:border-gray-600 dark:focus:border-gray-400 transition ease-in-out duration-300"
+    class="{% if widget.classes %}{{ widget.classes }}{% endif %} w-full border-0 bg-white dark:bg-gray-700 focus:text-black dark:focus:text-white text-gray-400 dark:text-gray-300 border-b border-b-1 dark:border-b-gray-500 border-b-gray-300 focus:ring-0 focus:border-gray-600 dark:focus:border-gray-400 transition ease-in-out duration-300"
 
     {% if widget.styles %}
         style="{{ widget.styles }}"
