--- a/templates/404.html
+++ b/templates/404.html
@@ -15,7 +15,7 @@
             <p class="max-w-[66%]">The requested page is not found, click below to visit our home, or go to our contact page if this is a recurring issue!</p>
         </div>
         <div class="flex justify-center">
-            <a href="#" class="bg-gray-800 text-white hover:text-black dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Home</a>
+            <a href="{% url 'base:index' %}" class="bg-gray-800 text-white hover:text-black dark:bg-white dark:text-black dark:hover:text-white dark:hover:bg-gray-800 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Home</a>
         </div>
       </div>
     </div>
