add: new message system implemented, can display pop up messages on any page, if inheriting from base template with the message_runner imported

--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load custom_tags %}
 {% load alert_tags %}
-
+{% csrf_token %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +21,7 @@
         {% endblock %}
     </div>
     {% include 'fragments/footer.html' %}
+    {% include 'fragments/utils/messages/message_runner.html' %}
 </body>
     <span scripts>
         {% block scripts%}
