add: new middleware for determining AJAX requests, additional changes and modals for product page, edit product design finalised, ajax request to retrieve modal for editing implemented, need post request to create db row

--- a/templates/main_app/base.html
+++ b/templates/main_app/base.html
@@ -23,8 +23,8 @@
     <!-- Full -->
     {% comment %} {% include 'fragments/demo_app/navbar_sidebar.html' %} {% endcomment %}
 
-    <main class="p-4 md:ml-64 h-auto pt-12 mt-16 md:mt-6">
-      {% block main_app_content %}{% endblock %}
+    <main class="p-4 md:ml-64 h-full pt-12 mt-16 md:mt-6">
+      {% block content %}{% endblock %}
     </main>
   </div>
 </body>
