--- a/templates/main_app/invoice/create.html
+++ b/templates/main_app/invoice/create.html
@@ -3,7 +3,7 @@
 {% block title %}{{ page_title }}{% endblock %}
 {% load custom_tags %}
 
-{% block main_app_content %}
+{% block content %}
 <h1 class="text-5xl font-bold text-center mb-6">Create invoice</h1>
 <table class="table-auto w-full" id="invoice_table">
     <thead>
