--- a/templates/main_app/invoice/index.html
+++ b/templates/main_app/invoice/index.html
@@ -2,7 +2,7 @@
 {% block title %}{{ page_title }}{% endblock %}
 {% load custom_tags %}
 {% load static %}
-{% block main_app_content %}
+{% block content %}
 <h1 class="text-5xl font-bold pb-2">Invoices</h1>
 <table class="table-auto w-full">
     <thead>
