--- a/templates/fragments/main_app/sidebar.html
+++ b/templates/fragments/main_app/sidebar.html
@@ -1,7 +1,7 @@
 {% load static tailwind_tags %}
 {% tailwind_css  %}
 <aside
-      class="fixed top-8 md:xl:top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform bg-white border-r border-gray-200 md:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
+      class="fixed top-8 md:xl:top-0 left-0 z-40 w-64 h-screen pt-14  transition-transform bg-white border-r border-gray-200 -translate-x-full md:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
       aria-label="Sidenav"
       id="drawer-navigation"
     >
@@ -119,9 +119,16 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="{% url 'main_app:jobs:index' %}"
                   class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Calendar</a
+                >
+              </li>
+              <li>
+                <a
+                  href="{% url 'main_app:customer_management:index' %}"
+                  class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                  >Customers</a
                 >
               </li>
             </ul>
