--- a/templates/fragments/products/test_modal.html
+++ b/templates/fragments/products/test_modal.html
@@ -20,7 +20,7 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <form action="" id="create-form">
+            <form method="POST" id="create-form">
                 {% csrf_token %}
                 <div class="grid gap-4 mb-4 sm:grid-cols-2">
                     <div>
@@ -50,7 +50,7 @@
                         <textarea id="description" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Write product description here"></textarea>                    
                     </div>
                 </div>
-                <button type="submit" onclick="" class="text-black dark:text-white inline-flex items-center bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                <button type="submit" class="text-black dark:text-white inline-flex items-center bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
                     <svg class="mr-1 -ml-1 w-6 h-6" fill="#000000" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"></path></svg>
                     Add new product
                 </button>
@@ -63,7 +63,7 @@
     $(document).on('submit', '#create-form', function(e) {
         e.preventDefault();
         $.ajax({
-            type: 'post',
+            type: 'POST',
             headers: {'X-CSRFToken': $('input[name=csrfmiddlewaretoken]').val()},
             url: "{% url 'main_app:products:create' %}",
             //mode: 'same-origin', // Do not send CSRF token to another domain.
@@ -74,6 +74,7 @@
                 product_price: $('#price').val(),
                 product_image: $('#image').val(),
                 product_category: $('#category').val(),
+                action: 'post'
             },
             success: function (data) {
                 console.log(data);
