--- a/templates/main_app/dashboard.html
+++ b/templates/main_app/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "main_app/base.html" %}
 {% block title %}{{ page_title }}{% endblock %}
-{% block main_app_content %}
+{% block content %}
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
     <div
       class="border-2 border-dashed border-gray-300 rounded-lg dark:border-gray-600 h-32 md:h-64"
