--- a/templates/main_app/settings/index.html
+++ b/templates/main_app/settings/index.html
@@ -1,6 +1,6 @@
 {% extends "main_app/base.html" %}
 {% block title %}{{ page_title }}{% endblock %}
-{% block main_app_content %}
+{% block content %}
     <div>
         <h1>Settings</h1>
     </div>
