--- a/templates/fragments/products/new_product_button.html
+++ b/templates/fragments/products/new_product_button.html
@@ -1,7 +1,7 @@
 {% spaceless %}
 {% load static %}
 <div class="w-full bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700" id="product-card-new">
-    <ul class="hidden text-sm font-medium text-center text-gray-500 divide-x divide-gray-200 rounded-lg sm:flex dark:divide-gray-600 dark:text-gray-400 rtl:divide-x-reverse" id="fullWidthTab">
+    <ul class="text-sm font-medium text-center text-gray-500 divide-x divide-gray-200 rounded-lg sm:flex dark:divide-gray-600 dark:text-gray-400 rtl:divide-x-reverse" id="fullWidthTab">
         <div class="w-full bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 cursor-pointer">
             <img class="inline-block p-4 fill-current text-red-500" width='50px' src="{% static 'img/svg_images/misc/plus.svg' %}"/>
         </div>
