--- a/templates/main_app/base.html
+++ b/templates/main_app/base.html
@@ -4,7 +4,9 @@
 {% load alert_tags %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="
+    -ms-overflow-style: none;
+    scrollbar-width: none;">
 <head>
     {% tailwind_css  %}
     <meta charset="UTF-8"/>
